Another attempt to fix nav buttons on mobile

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ h1, h2, h3 {
   padding: 0 40px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-start;
 }
 
 .logo {
